--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css?family=Saira:700");
+@import url("https://fonts.googleapis.com/css?family=Courgette&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.slide {
+  width: 100vw;
+  height: 100vh;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  width: 500vw;
+  transform: rotate(90deg) translateY(-100vh);
+  transform-origin: top left;
+}
+.one {
+  background: none;
+  font-family: "Saira", sans-serif;
+  font-weight: 700;
+}
+.two {
+  background: none;
+}
+.three {
+  background: none;
+  display: flex;
+  flex-direction: row;
+  padding-left: 2em;
+}
+.four {
+  background: none;
+}
+.five {
+  background: none;
 }
 
-.App-link {
-  color: #61dafb;
+.outer-wrapper {
+  width: 100vh;
+  height: 100vw;
+  transform: rotate(-90deg) translateX(-100vh);
+  transform-origin: top left;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  position: absolute;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  scroll-behavior: smooth;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
