--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,88 @@
+@import url("https://fonts.googleapis.com/css?family=Saira:700");
+@import url("https://fonts.googleapis.com/css?family=Courgette&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Saira", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #000;
+  height: 100vh;
+  font-weight: 700;
+  
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+img {
+  position: fixed;
+  width: 100%;
+  transition: top 1s;
+  z-index: -1;
+}
+.graph-container {
+  overflow: hidden;
+  height: 100vh;
+  z-index: -1;
+}
+.graph {
+  background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0) 0px,
+      rgba(54, 226, 248, 0.7) 10%,
+      rgba(54, 226, 248, 0.7) 3px,
+      rgba(0, 0, 0, 0) 0px
+    ),
+    linear-gradient(
+      90deg,
+      rgba(0, 0, 0, 0) 0px,
+      rgba(54, 226, 248, 0.7) 0%,
+      rgba(54, 226, 248, 0.7) 2px,
+      rgba(0, 0, 0, 0) 0px
+    );
+  background-size: 4em 2em, 4em 2em;
+  background-color: transparent;
+  height: 70em;
+  perspective: 1000px;
+  margin-top: 2em;
+  transform: perspective(220px) rotateX(45deg) scale(4);
+  animation: move 10s linear infinite;
+  ;
+}
+
+.imgCar{
+  z-index: 0;
+  position: fixed;
+  top: 24.8em;
+  left: 30em;
+  height: 4.5em;
+  width: 5em;
+  transform: perspective(300px) rotateX(30deg) scale(1);
+  animation: hover 5s linear infinite;
+
+}
+
+@keyframes move {
+   to {
+      background-position-y: 1000px;
+   }
+}
+@keyframes hover {
+   0% {
+      transform: translatey(-10px)  perspective(300px)
+         translatez(0);
+   }
+   50% {
+      transform: translatey(10px)  perspective(300px)
+         translatez(10px);
+   }
+   100% {
+      transform: translatey(-10px)  perspective(300px)
+         translatez(0);
+   }
 }
