--- a/src/components/accueil.css
+++ b/src/components/accueil.css
@@ -5,8 +5,8 @@
     #abd3ee 50%,
     #859ee2 51%,
     #d5ebfb 100%
-  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebf1f6', endColorstr='#d5ebfb',GradientType=0 ); /* IE6-9 */
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebf1f6', endColorstr='#d5ebfb',GradientType=0 );
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -53,7 +53,7 @@
     2px 1px 2px rgba(255,0,255,0.85), 
     -3px -2px 3px rgba(0,0,255,0.85),
     1px -2px 0 rgba(255,255,255,0.8);
-    color: rgb(0, 162, 255);
+    color: rgb(0, 225, 255);
     font-size: 3.5em;
     transform: rotateZ(-15deg);
     position: absolute;
