--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -26,6 +26,10 @@ nav a {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 14px;
+  font-family: 'Saira';
+  text-shadow: 1px -1px 0 rgba(255, 255, 255, 0.5),
+    2px 1px 3px rgba(255, 0, 255, 0.85);
+
 }
 
 nav a:hover {
@@ -37,7 +41,7 @@ nav a::before {
   content: "";
   display: block;
   height: 5px;
-  background-color: rgba(54, 226, 248, 0.7);
+  background-color: rgb(0, 255, 255,0.85);
   position: absolute;
   top: 1.5em;
   width: 0%;
@@ -49,7 +53,20 @@ nav a:hover::before {
   width: 100%;
   text-decoration: none;
 }
-nav a:active {
+
+.activeTitle{
+text-decoration: none;
+color: rgb(255, 255, 255);
+}
+.activeTitle::before{
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  content: "";
+  display: block;
+  height: 5px;
+  background-color: rgb(0, 255, 255,0.85);
+  position: absolute;
+  top: 1.5em;
   width: 100%;
   text-decoration: none;
 }
