--- a/src/components/card.css
+++ b/src/components/card.css
@@ -6,15 +6,16 @@
   position: absolute;
   top: 30em;
   left: 0.3em;
-  width: 12em;
-  height: 23em;
+  width: 12.2em;
+  height: 19.8em;
   border: none;
   margin: 5em 1em 0em 0em;
   background: rgba(0, 0, 0, 0.6);
   color: white;
+  
 }
 .card:hover {
-  box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.253) !important;
+  box-shadow: 5px 5px 20px 1px rgb(0, 225, 255,0.4) !important;
 }
 .overflow {
   overflow: hidden;
@@ -22,10 +23,9 @@
 }
 
 .card-image {
-  height: 180px;
+  height: 155px;
   transform: scale(1);
   transition: transform 0.5s ease;
-  margin-bottom: 0.5em;
 }
 .card-image button {
   display: none;
@@ -44,7 +44,9 @@
 
 .card-title h4 {
   margin-top: 5px;
-  font-size: 14px;
+  font-size: 18px;
+  font-family: "AstronReg";
+
 }
 .card-title {
   margin-left: 8px;
@@ -52,7 +54,8 @@
   text-align: justify;
 }
 .card-text {
-  font-size: 10px;
+  font-size: 13px;
+  font-family: "Lunatic";
 }
 .card-link {
   border: none;
@@ -63,7 +66,7 @@
   font-size: 20px;
   position: fixed;
   background-color: transparent;
-  bottom: -0.5em;
+  bottom: -1em;
   left: 0em;
   text-shadow: 1px -1px 0 rgba(255,255,255,0.5),
     2px 1px 3px rgba(255,0,255,0.85), 
