--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -25,8 +25,8 @@ nav a {
   color: rgb(151, 151, 151);
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 14px;
-  font-family: 'Saira';
+  font-size: 18px;
+  font-family:'AstronVid';
   text-shadow: 1px -1px 0 rgba(255, 255, 255, 0.5),
     2px 1px 3px rgba(255, 0, 255, 0.85);
 
@@ -43,7 +43,7 @@ nav a::before {
   height: 5px;
   background-color: rgb(0, 255, 255,0.85);
   position: absolute;
-  top: 1.5em;
+  top: 1em;
   width: 0%;
   transition: all ease-in-out 250ms;
   text-decoration: none;
@@ -52,6 +52,7 @@ nav a::before {
 nav a:hover::before {
   width: 100%;
   text-decoration: none;
+  
 }
 
 .activeTitle{
@@ -66,7 +67,7 @@ color: rgb(255, 255, 255);
   height: 5px;
   background-color: rgb(0, 255, 255,0.85);
   position: absolute;
-  top: 1.5em;
+  top: 1em;
   width: 100%;
   text-decoration: none;
 }
