--- a/src/components/parcours.css
+++ b/src/components/parcours.css
@@ -1,196 +1,358 @@
-.parcours-page {
-  position: fixed;
-  top: 1em;
+.flex-parent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  color: white;
 }
 
-.top-frames {
+.dots-before {
+  border: none;
+  border-top: 7px dotted rgba(170, 0, 170, 1);
+  background-color: none;
+  width: 1em;
   position: fixed;
-  top: 4.8em;
+  top: 40.04em;
   left: 2em;
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
+  filter: blur(0.8px);
+  box-shadow: inset 0px 1px 5px rgba(170, 0, 170),
+    inset 0px -1px 5px rgba(170, 0, 170);
 }
 
-.blue-arrow {
+.dots-after {
+  border: none;
+  border-top: 7px dotted rgb(119, 0, 255);
+  background-color: none;
+  width: 1em;
   position: fixed;
-  top: 13.2em;
-  left: -4.8em;
+  top: 40.04em;
+  left: 63.5em;
+  filter: blur(0.8px);
+  box-shadow: inset 0px 1px 5px rgb(119, 0, 255),
+    inset 0px -1px 5px rgb(119, 0, 255);
 }
 
-.bottom-frames {
+.input-flex-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 90vw;
+  max-width: 1000px;
   position: fixed;
-  top: 13.79em;
-  left: 7em;
-  -webkit-transform: scaleY(-1) scaleX(-1);
-  transform: scaleY(-1) scaleX(-1);
-}
-.blue-arrow path:nth-child(1) {
-  animation: linear 3s slidein;
-}
-
-.top-frames path:nth-child(1) {
-  animation: linear 3s slideup;
-}
-.top-frames path:nth-child(2) {
-  animation: linear 3s slideup;
-}
-.top-frames path:nth-child(3) {
-  animation: linear 3s slideup;
-}
-.top-frames path:nth-child(4) {
-  animation: linear 3s slideup;
-}
-.top-frames path:nth-child(5) {
-  animation: linear 3s slideup;
-}
-.top-frames path:nth-child(6) {
-  animation: linear 3s slideup;
-}
-.top-frames path:nth-child(7) {
-  animation: linear 3s slideup;
-}
-.top-frames path:nth-child(8) {
-  animation: linear 3s slideup;
-}
-.top-frames path:nth-child(9) {
-  animation: linear 3s slideup;
-}
-
-.bottom-frames path:nth-child(1) {
-  animation: linear 3s slideup;
-}
-.bottom-frames path:nth-child(2) {
-  animation: linear 3s slideup;
-}
-.bottom-frames path:nth-child(3) {
-  animation: linear 3s slideup;
-}
-.bottom-frames path:nth-child(4) {
-  animation: linear 3s slideup;
-}
-.bottom-frames path:nth-child(5) {
-  animation: linear 3s slideup;
-}
-.bottom-frames path:nth-child(6) {
-  animation: linear 3s slideup;
-}
-.bottom-frames path:nth-child(7) {
-  animation: linear 3s slideup;
-}
-.bottom-frames path:nth-child(8) {
-  animation: linear 3s slideup;
-}
-.bottom-frames path:nth-child(9) {
-  animation: linear 3s slideup;
-}
-
-@keyframes slidein {
-  from {
-    transform: scaleX(0);
-  }
-  to {
-    transform: scaleX(1);
-  }
-}
-@keyframes slideup {
-  from {
-    transform: scaleY(0);
-  }
-  to {
-    transform: scaleY(1);
-  }
-}
-
-@keyframes line-anim {
-  to {
-    stroke-dashoffset: 0;
-  }
-}
-@keyframes appear {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.box-1 {
-  background: rgb(0, 0, 0, 0.5);
-  position: fixed;
-  top: 7.45em;
-  left: 3.22em;
+  top: -3em;
+  left: 1.7em;
+  z-index: 0;
+  margin-left: calc((80vw - 25px) / 20);
   color: white;
-  font-size: 12px;
-  width: 17.33em;
-  height: 9.1em;
-  overflow-wrap: anywhere;
-  padding: 2px 2px 0px 2px;
-  animation: appear 5s cubic-bezier(1, 0, 0.8, 1);
 }
-.box-2 {
-  background: rgb(0, 0, 0, 0.5);
-  position: fixed;
-  top: 7.45em;
-  left: 31.63em;
+
+input {
+  width: 25px;
+  height: 25px;
+  background-color: rgba(170, 0, 170, 1);
+  position: relative;
+  border-radius: 50%;
+  border: 5px solid rgba(170, 0, 170);
+  top: 24em;
+  display: block;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  cursor: pointer;
   color: white;
-  font-size: 12px;
-  width: 17.33em;
-  height: 9.1em;
-  overflow-wrap: anywhere;
-  padding: 2px 2px 0px 2px;
-  animation: appear 5s cubic-bezier(1, 0, 0.8, 1);
+  box-shadow: 0px 1px 5px rgba(170, 0, 170), 0px -1px 5px rgba(170, 0, 170);
 }
-.box-3 {
-  background: rgb(0, 0, 0, 0.5);
-  position: fixed;
-  top: 7.45em;
-  left: 60.05em;
-  color: white;
-  font-size: 12px;
-  width: 17.33em;
-  height: 9.1em;
-  overflow-wrap: anywhere;
-  padding: 2px 2px 0px 2px;
-  animation: appear 5s cubic-bezier(1, 0, 0.8, 1);
+input:focus {
+  outline: none;
 }
-.box-4 {
-  background: rgb(0, 0, 0, 0.5);
-  position: fixed;
-  top: 21.5em;
-  left: 9.9em;
-  color: white;
-  font-size: 12px;
-  width: 17.33em;
-  height: 9.1em;
-  overflow-wrap: anywhere;
-  padding: 2px 2px 0px 2px;
-  animation: appear 5s cubic-bezier(1, 0, 0.8, 1);
+input::before,
+input::after {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  border: rgb(119, 0, 255);
+  transform: translateY(-50%);
+  transition: background-color 1s ease;
+  background-color: rgba(170, 0, 170, 1);
+  box-shadow: 0px 1px 5px rgba(170, 0, 170), 0px -1px 5px rgba(170, 0, 170);
+  width: 5vw;
+  height: 3px;
+  max-width: 70px;
 }
-.box-5 {
-  background: rgb(0, 0, 0, 0.5);
-  position: fixed;
-  top: 21.5em;
-  left: 38.3em;
-  color: white;
-  font-size: 12px;
-  width: 17.33em;
-  height: 9.1em;
-  overflow-wrap: anywhere;
-  padding: 2px 2px 0px 2px;
-  animation: appear 5s cubic-bezier(1, 0, 0.8, 1);
+
+input::before {
+  left: calc(-5.2vw + 13.5px);
 }
-.box-6 {
-  background: rgb(0, 0, 0, 0.5);
-  position: fixed;
-  top: 21.5em;
-  left: 66.7em;
+input::after {
+  right: calc(-5.2vw + 15.5px);
+}
+input:checked {
+  transition: background-color 1s ease;
+  background-color: rgba(170, 0, 170, 1);
+  box-shadow: 1px 1px 5px rgba(170, 0, 170), -1px -1px 5px rgba(170, 0, 170);
+}
+input:checked::before {
+  transition: background-color 1s ease;
+  background-color: rgba(170, 0, 170, 1);
+  box-shadow: 1px 1px 5px rgba(170, 0, 170), -1px -1px 5px rgba(170, 0, 170);
+}
+input:checked::after {
+  background-color: rgb(119, 0, 255);
+  box-shadow: 1px 1px 5px rgb(119, 0, 255), -1px -1px 5px rgb(119, 0, 255);
+}
+input:checked ~ input,
+input:checked ~ input::before,
+input:checked ~ input::after {
+  background-color: rgb(119, 0, 255);
+  box-shadow: 1px 1px 5px rgb(119, 0, 255), -1px -1px 5px rgb(119, 0, 255);
+}
+input:checked + .dot-info span {
+  font-size: 13px;
+  font-weight: bold;
   color: white;
-  font-size: 12px;
-  width: 17.33em;
-  height: 9.1em;
-  overflow-wrap: anywhere;
-  padding: 2px 2px 0px 2px;
-  animation: appear 5s cubic-bezier(1, 0, 0.8, 1);
+  width: 90px;
+}
+input:checked + .dot-info span.year {
+  font-size: 22px;
+  font-weight: 400;
+  color: white;
+  width: 80px;
+}
+
+input:checked + .dot-info span.label {
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  width: 90px;
+}
+
+.dot-info {
+  width: 15px;
+  height: 15px;
+  display: block;
+  visibility: hidden;
+  position: relative;
+  top: 24em;
+  z-index: -1;
+  left: calc((((80vw - 25px) / 20) * -1) - 1px);
+  color: white;
+}
+.dot-info span {
+  visibility: visible;
+  position: absolute;
+  font-size: 11px;
+  color: white;
+}
+.dot-info span.year {
+  bottom: -40px;
+  left: 100%;
+  width: 80px;
+  transform: translateX(-50%);
+  font-family: "AstronVid";
+  font-size: 22px;
+}
+.dot-info span.label {
+  top: -70px;
+  left: 0px;
+  transform: rotateZ(-45deg);
+  width: 80px;
+  text-indent: -10px;
+  color: white;
+  font-family: "Lunatic";
+  font-size: 14px;
+}
+
+#timeline-descriptions-wrapper {
+  width: 100%;
+  margin-top: 120px;
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+  color: white;
+  border-top: solid 1px rgb(0, 195, 255);
+  border-bottom: solid 1px rgb(0, 195, 255);
+  box-shadow: 2px 2px 5px rgba(170, 0, 170), 2px 2px 5px rgb(0, 195, 255);
+  border-radius: 0px 30px 0px 30px;
+  margin-left: -2em;
+  height: 7em;
+  padding: 10px;
+  font-family: "Lunatic";
+  background: rgba(0, 0, 0, 0.3);
+}
+#timeline-descriptions-wrapper p {
+  margin-top: 0;
+  display: none;
+  color: white;
+}
+#timeline-descriptions-wrapper br {
+  padding: 10em;
+}
+
+input[data-description="2012"]:checked
+  ~ #timeline-descriptions-wrapper
+  p[data-description="2012"] {
+  display: block;
+}
+
+input[data-description="2013"]:checked
+  ~ #timeline-descriptions-wrapper
+  p[data-description="2013"] {
+  display: block;
+}
+
+input[data-description="2014"]:checked
+  ~ #timeline-descriptions-wrapper
+  p[data-description="2014"] {
+  display: block;
+}
+
+input[data-description="2015"]:checked
+  ~ #timeline-descriptions-wrapper
+  p[data-description="2015"] {
+  display: block;
+}
+
+input[data-description="2018"]:checked
+  ~ #timeline-descriptions-wrapper
+  p[data-description="2018"] {
+  display: block;
+}
+
+input[data-description="2018-bis"]:checked
+  ~ #timeline-descriptions-wrapper
+  p[data-description="2018-bis"] {
+  display: block;
+}
+
+input[data-description="2019"]:checked
+  ~ #timeline-descriptions-wrapper
+  p[data-description="2019"] {
+  display: block;
+}
+
+input[data-description="2019-bis"]:checked
+  ~ #timeline-descriptions-wrapper
+  p[data-description="2019-bis"] {
+  display: block;
+}
+
+input[data-description="2020"]:checked
+  ~ #timeline-descriptions-wrapper
+  p[data-description="2020"] {
+  display: block;
+}
+
+input[data-description="Aujourd'hui"]:checked
+  ~ #timeline-descriptions-wrapper
+  p[data-description="Aujourd'hui"] {
+  display: block;
+}
+
+@media (min-width: 1250px) {
+  .input-flex-container {
+    margin-left: 62.5px;
+  }
+
+  input::before {
+    left: -37.5px;
+  }
+  input::after {
+    right: -37.5px;
+  }
+
+  .dot-info {
+    left: calc((((1000px - 25px) / 20) * -1) - 1px);
+  }
+
+  #timeline-descriptions-wrapper {
+    margin-left: -37.5px;
+  }
+}
+@media (max-width: 630px) {
+  .flex-parent {
+    justify-content: initial;
+  }
+
+  .input-flex-container {
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 400px;
+    height: auto;
+    margin-top: 15vh;
+    margin-left: 0;
+    padding-bottom: 30px;
+  }
+
+  input,
+  .dot-info {
+    width: 60px;
+    height: 60px;
+    margin: 0 10px 50px;
+  }
+
+  input {
+    background-color: transparent !important;
+    z-index: 1;
+  }
+  input::before,
+  input::after {
+    content: none;
+  }
+  input:checked + .dot-info {
+    background-color: #2c3e50;
+  }
+  input:checked + .dot-info span.year {
+    font-size: 14px;
+  }
+  input:checked + .dot-info span.label {
+    font-size: 12px;
+  }
+
+  .dot-info {
+    visibility: visible;
+    border-radius: 50%;
+    z-index: 0;
+    left: 0;
+    margin-left: -70px;
+    background-color: rgb(0, 225, 255);
+  }
+  .dot-info span.year {
+    top: 0;
+    left: 0;
+    transform: none;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ecf0f1;
+  }
+  .dot-info span.label {
+    top: calc(100% + 5px);
+    left: 50%;
+    transform: translateX(-50%);
+    text-indent: 0;
+    text-align: center;
+  }
+
+  #timeline-descriptions-wrapper {
+    margin-top: 30px;
+    margin-left: 0;
+    text-align: center;
+  }
+}
+@media (max-width: 480px) {
+  .input-flex-container {
+    width: 340px;
+  }
+}
+@media (max-width: 400px) {
+  .input-flex-container {
+    width: 300px;
+  }
 }
