--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,21 @@
 @import url("https://fonts.googleapis.com/css?family=Saira:700");
 @import url("https://fonts.googleapis.com/css?family=Courgette&display=swap");
 
+@font-face {
+  font-family: 'AstronReg';
+  src: local('AstronReg'), url(./fonts/astron-boy.regular.ttf) format('truetype');
+  
+}
+@font-face {
+  font-family: 'AstronVid';
+  src: local('AstronVid'), url(./fonts/astron-boy.video.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Lunatic';
+  src: local('Lunatic'), url(./fonts/LunaticSuperstar-8KgB.otf) format('truetype');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -34,14 +49,14 @@ img {
   background: linear-gradient(
       180deg,
       rgba(0, 0, 0, 0) 0px,
-      rgba(54, 226, 248, 0.7) 10%,
+      rgba(54, 226, 248, 0.7) 20%,
       rgba(54, 226, 248, 0.7) 3px,
       rgba(0, 0, 0, 0) 0px
     ),
     linear-gradient(
       90deg,
       rgba(0, 0, 0, 0) 0px,
-      rgba(54, 226, 248, 0.7) 0%,
+      rgba(54, 226, 248, 0.7) 5%,
       rgba(54, 226, 248, 0.7) 2px,
       rgba(0, 0, 0, 0) 0px
     );
