--- a/src/components/accueil.css
+++ b/src/components/accueil.css
@@ -64,6 +64,58 @@
     z-index: 2;
 }
 
+
+.name{
+  position: absolute;
+    top: 2.5em;
+    left: 39.4em;
+    width:18%;
+}
+
+.name path:nth-child(1){
+  stroke-dasharray: 325px;
+  stroke-dashoffset: 325px;
+  animation: line-anim 2s ease forwards;
+}.name path:nth-child(2){
+  stroke-dasharray: 349px;
+  stroke-dashoffset: 349px;
+  animation: line-anim 2s ease forwards 0.3s;
+}.name path:nth-child(3){
+  stroke-dasharray: 322px;
+  stroke-dashoffset: 322px;
+  animation: line-anim 2s ease forwards 0.6s;
+}.name path:nth-child(4){
+  stroke-dasharray: 427px;
+  stroke-dashoffset: 427px;
+  animation: line-anim 2s ease forwards 0.9s;
+}.name path:nth-child(5){
+  stroke-dasharray: 200px;
+  stroke-dashoffset: 200px;
+  animation: line-anim 2s ease forwards 1.2s;
+}.name path:nth-child(6){
+  stroke-dasharray: 349px;
+  stroke-dashoffset: 349px;
+  animation: line-anim 2s ease forwards 1.5s;
+}.name path:nth-child(7){
+  stroke-dasharray: 445px;
+  stroke-dashoffset: 445px;
+  animation: line-anim 2s ease forwards 1.5s;
+}.name path:nth-child(8){
+  stroke-dasharray: 280px;
+  stroke-dashoffset: 280px;
+  animation: line-anim 2s ease forwards 1.8s;
+}.name path:nth-child(9){
+  stroke-dasharray: 62px;
+  stroke-dashoffset: 62px;
+  animation: line-anim 2s ease forwards 2.1s;
+}
+
+@keyframes line-anim{
+  to{
+    stroke-dashoffset: 0;
+  }
+}
+
 @keyframes bg-shift {
    0% {
       background-position: 0 -25px;
