--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 50%;
   color: white;
-  margin-bottom: -330px;
+  margin-bottom: -564px;
 }
 #contact {
   padding-top: 2em;
@@ -16,19 +16,23 @@
 .lead {
   color: rgb(0, 255, 255, 0.7);
   text-align: center;
-  font-size: 20px;
+  font-size: 40px !important;
   font-weight: bolder;
-  margin-top: 25px;
-  margin-bottom: 35px;
+  margin-top: 7%;
+  margin-bottom: 50px;
   font-family: "Lunatic";
   text-shadow: 2px 2px 5px rgba(170, 0, 170), 2px 2px 5px rgb(0, 195, 255);
 }
 .contact input {
-  width: 60%;
+  width: 70%;
   font-family: "Lunatic";
+  margin-left: 2%;
+  font-size: 30px;
 }
 .contact label {
   font-family: "AstronVid";
+  font-size: 35px !important;
+  margin-left: 2%;
   text-shadow: 2px 2px 5px rgba(170, 0, 170), 2px 2px 5px rgb(0, 195, 255);
 }
 #exampleName {
@@ -40,8 +44,8 @@
   box-shadow: 2px 2px 5px rgba(170, 0, 170), 2px 2px 5px rgb(0, 195, 255);
   color: white;
   position: absolute;
-  top: 7.5em;
-  left: 15em;
+  top: 8em;
+  left: 18%;
 }
 
 #exampleEmail {
@@ -53,8 +57,8 @@
   box-shadow: 2px 2px 5px rgba(170, 0, 170), 2px 2px 5px rgb(0, 195, 255);
   color: white;
   position: absolute;
-  top: 10.5em;
-  left: 15em;
+  top: 11em;
+  left: 18%;
 }
 
 #exampleNumber {
@@ -66,19 +70,21 @@
   box-shadow: 2px 2px 5px rgba(170, 0, 170), 2px 2px 5px rgb(0, 195, 255);
   color: white;
   position: absolute;
-  top: 13.5em;
-  left: 15em;
+  top: 14em;
+  left: 18%;
 }
 #exampleText {
   background: transparent;
   color: white;
   position: absolute;
-  top: 16.5em;
-  left: 15em;
-  width: 60%;
+  margin-left: 2%;
+  top: 17em;
+  left: 18%;
+  width: 70%;
   font-family: "Lunatic";
+  font-size: 30px;
   min-height: 40px;
-  max-height: 80px;
+  max-height: 160px;
   border-top: solid 1px rgb(0, 195, 255);
   border-left: none;
   border-right: none;
@@ -87,15 +93,15 @@
 }
 .buttonGroup {
   position: absolute;
-  top: 21.5em;
-  left: 27.5em;
+  top: 120%;
+  left: 42%;
 }
 
 .contactButton {
   border: none;
   font-family: "Courgette", cursive;
   color: rgb(255, 0, 234);
-  font-size: 20px;
+  font-size: 35px;
   background-color: transparent;
   transition: transform 0.5s ease;
   text-shadow: 1px -1px 0 rgba(255, 255, 255, 0.5),
