--- a/src/components/cv.css
+++ b/src/components/cv.css
@@ -1,21 +1,22 @@
 .download-text {
   color: rgb(0, 255, 255, 0.7);
   text-align: center;
-  font-size: 20px;
+  font-size: 40px;
   font-weight: bolder;
   font-family: "Lunatic";
   text-shadow: 2px 2px 5px rgba(170, 0, 170), 2px 2px 5px rgb(0, 195, 255);
   position: fixed;
-  left: 32%;
-  top: 3em;
+  left: 33%;
+  top: 4em;
 }
 
 #wrapper {
   position: fixed;
-  width: 350px;
-  height: 210px;
-  left: 22em;
-  top: 8em;
+  width: 550px;
+  height: 350px;
+  left: 37%;
+  top: 17em;
+  border-radius: 20px;
 }
 
 #reader {
@@ -26,13 +27,15 @@
 #reader .top {
   position: relative;
   width: 100%;
-  height: 125px;
+  height: 225px;
   z-index: 100;
+    border-radius: 20px;
+
 }
 
 #reader .bottom {
   width: 100%;
-  height: 75px;
+  height: 95px;
 }
 
 #reader .lights {
@@ -43,8 +46,8 @@
 
 .light {
   display: inline-block;
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
 }
 
 #card {
@@ -53,8 +56,8 @@
   align-items: center;
   position: absolute;
   margin-top: -75px;
-  width: 250px;
-  height: 150px;
+  width: 280px;
+  height: 180px;
   transform: translateX(-125px);
 }
 
@@ -89,7 +92,7 @@ body {
   left: 20px;
   bottom: 12px;
   width: 140px;
-  height: 10px;
+  height: 15px;
   background-color: #000;
 }
 
@@ -121,7 +124,7 @@ body {
 
 #message {
   font-family: "DSEG14Classic", sans-serif;
-  font-size: 20px;
+  font-size: 28px;
   color: rgba(255, 0, 255, 0.85);
   text-transform: uppercase;
   animation: jitter 3s infinite steps(2);
@@ -178,7 +181,7 @@ body {
 
 #photo {
   position: relative;
-  width: 75px;
+  width: 90px;
   height: 100px;
   background-color: #aeaeae;
   border: 2px solid #292929;
@@ -192,7 +195,7 @@ body {
   position: absolute;
   right: 0;
   bottom: 0;
-  width: 55px;
+  width: 60px;
   height: 80px;
   background-color: #000ba8;
   border: 2px solid #434343;
@@ -206,7 +209,7 @@ body {
   position: absolute;
   right: 30px;
   bottom: 45px;
-  width: 30px;
+  width: 35px;
   height: 15px;
   background-color: #a6a6a6;
   border: 2px solid #434343;
@@ -237,11 +240,11 @@ body {
 .cv-button {
   position: absolute;
   top: 10.5em;
-  left: 7em;
+  left: 6.5em;
   border: none;
   font-family: "Courgette", cursive;
   color: rgb(255, 0, 234);
-  font-size: 20px;
+  font-size: 35px;
   background-color: transparent;
   transition:  0.5s ease;
   text-shadow: 1px -1px 0 rgba(255, 255, 255, 0.5),
@@ -249,9 +252,9 @@ body {
     1px -1px 0 rgba(255, 255, 255, 0.5);
 }
 .cv-button:hover {
-  font-size: 22px;
-  top: 9.5em;
-  left: 6em;
+  font-size: 40px;
+  top: 9em;
+  left: 5.5em;
   color: rgb(255, 0, 234);
   text-decoration: none;
 }
