--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -2,7 +2,7 @@
   position: fixed;
   z-index: 1;
   width: 100%;
-  top: -0.5em;
+  top: 0.5em;
   left: -2em;
 }
 .list {
@@ -25,7 +25,7 @@ nav a {
   color: rgb(151, 151, 151);
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 18px;
+  font-size: 2em;
   font-family:'AstronVid';
   text-shadow: 1px -1px 0 rgba(255, 255, 255, 0.5),
     2px 1px 3px rgba(255, 0, 255, 0.85);
@@ -40,10 +40,10 @@ nav a:hover {
 nav a::before {
   content: "";
   display: block;
-  height: 5px;
+  height: 10px;
   background-color: rgb(0, 255, 255,0.85);
   position: absolute;
-  top: 1em;
+  top: 0.3em;
   width: 0%;
   transition: all ease-in-out 250ms;
   text-decoration: none;
@@ -64,10 +64,10 @@ color: rgb(255, 255, 255);
   color: rgb(255, 255, 255);
   content: "";
   display: block;
-  height: 5px;
+  height: 10px;
   background-color: rgb(0, 255, 255,0.85);
   position: absolute;
-  top: 1em;
+  top: 0.3em;
   width: 100%;
   text-decoration: none;
 }
